tests/invalid/interface_method_body.wio
interface IBad {
    fn Foo() {
    }
}

fn Entry(args: string[]) -> i32 {
    return 0;
}
